[project]
name = "cryptoguard"
version = "0.1.0"
description = "CryptoGuard — AI 驱动的数字货币行情监控系统，支持微信交互"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "larky",
    "websockets>=12.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.116.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.uv.sources]
larky = { path = "../larky" }

[tool.hatch.build.targets.wheel]
packages = ["src/price_monitor"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
